# 9Mage

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
src/: 9Mage.cpp  CMakeLists.txt
src/9Mage.o.dSYM/Contents/: Info.plist
src/9Mage.o.dSYM/Contents/Resources/Relocations/aarch64/: 9Mage.o.yml
src/main/: picpost_main.cpp
src/methods/: AGC.cpp  CMakeLists.txt  SEGCE.cpp  SEGCE.h  USM.cpp  USM.h  contrast.cpp  contrast.h  lighten.cpp  lighten.h  picpost.cpp  picpost.h  secedct.cpp  secedct.h  sharpen.cpp  sharpen.h  utility.cpp  utility.h
src/utils/: cmdline.h  utility.cpp  utility.h
